Add Page 72 mark

--- a/dos33.html
+++ b/dos33.html
@@ -4987,7 +4987,7 @@ With that "legalese" out of the way ... enjoy the read!
                     239 
                     240 
                     241 
-                    242 
+<hr>                    242                                                             ; === Page <a class='page' name='page72'>72</a> ===
                     243 
                     244 
                     245 
