--- a/dos33.html
+++ b/dos33.html
@@ -746,10 +746,10 @@ With that "legalese" out of the way ... enjoy the read!
                     00001 001             SBTL "DOS3.3C w/APPEND fix, U/L case"
                     00002 002             LST  ON,VSYM
                     00003 003             MSB  OFF
-                    00004 004 <a class="f" name="ORIGIN">ORIGIN      </a>EQU  $1B00
-                    00005 005 <a class="do" name="DIAGMOD">DIAGMOD     </a>EQU  0
-                    00006 006 <a class="do" name="DOS33B" >DOS33B      </a>EQU  1
-                    00007 007 <a class="do" name="ULC"    >ULC         </a>EQU  0          ;1=ASM with lower case patch    ;Address .. Addr, Track/Sector(s)
+                    00004 004 <a class='f'  name='ORIGIN' >ORIGIN      </a>EQU  $1B00
+                    00005 005 <a class='do' name='DIAGMOD'>DIAGMOD     </a>EQU  0
+                    00006 006 <a class='do' name='DOS33B' >DOS33B      </a>EQU  1
+                    00007 007 <a class='do' name='ULC"    >ULC         </a>EQU  0          ;1=ASM with lower case patch    ;Address .. Addr, Track/Sector(s)
                     00008 008             INCLUDE <a class="_c00 file" href="#RELOCTR">RELOCTR</a>,,2                              ; $1B00 .. $1C80, T0SA - T0SB
                     00009 009             INCLUDE <a class="_c01 file" href="#DOSINIT">DOSINIT</a>,,2                              ; $1C81 .. $1E80, T0SB - T0SD
                     00010 010             INCLUDE <a class="_c02 file" href="#DOSHOOK">DOSHOOK</a>,,2                              ; $1E81 .. $1FCC, T0SD - T0SE
