Clarify Int Basic Cold vs Warm start

--- a/dos33.html
+++ b/dos33.html
@@ -843,8 +843,8 @@ With that "legalese" out of the way ... enjoy the read!
                     00094 058 <a class='d' name='IBHMEM'     >IBHMEM      </a>EQU $<span class='n'>4C</span>         ; INTEGER BASIC HIMEM           ; Integer Basic
                     00095 059 <a class='d' name='IBSOP'      >IBSOP       </a>EQU $<span class='n'>CA</span>         ; INTEGER BASIC START OF CGM    ; Integer Basic CGM ???
                     00096 060 <a class='f' name='IBBRK'      >IBBRK       </a>EQU $<span class='e'>E3E3</span>       ; BASIC BREAK                   ; Integer Basic
-                    00097 061 <a class='f' name='IBGO'       >IBGO        </a>EQU $<span class='e'>E000</span>       ; BASIC ENTRY POINT             ; Integer Basic
-                    00098 062 <a class='f' name='IBCONT'     >IBCONT      </a>EQU $<span class='e'>E003</span>       ; BASIC CONTINUE ENTRY POINT    ; Integer Basic
+                    00097 061 <a class='f' name='IBGO'       >IBGO        </a>EQU $<span class='e'>E000</span>       ; BASIC ENTRY POINT             ; Integer Basic COLD start
+                    00098 062 <a class='f' name='IBCONT'     >IBCONT      </a>EQU $<span class='e'>E003</span>       ; BASIC CONTINUE ENTRY POINT    ; Integer Basic WARM start
                     00099 063 <a class='d' name='IBSOV'      >IBSOV       </a>EQU $<span class='n'>CC</span>         ; BASIC START OF VARIABLES      ; Integer Basic
                     00100 064 <a class='d' name='ASSOP'      >ASSOP       </a>EQU $<span class='n'>67</span>         ; AS START OF PROGRAM           ; Applesoft Basic
                     00101 065 <a class='d' name='ASEOP'      >ASEOP       </a>EQU $<span class='n'>AF</span>         ; AS END OF PROGRAM             ; Applesoft Basic
